--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -9,27 +9,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
+    "import pybedtools\n",
     "from gtfparse import read_gtf\n",
-    "import pybedtools"
+    "from ftplib import FTP"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
-    "file_genome_sequence = './data/Homo_sapiens.GRCh38.104.dna_rm.primary_assembly.fa'\n",
-    "file_gene_annotation = './data/Homo_sapiens.GRCh38.104.gtf'"
+    "#file_genome_sequence = './data/Homo_sapiens.GRCh38.104.dna_rm.primary_assembly.fa'\n",
+    "#file_gene_annotation = './data/Homo_sapiens.GRCh38.104.gtf'"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "source": [
+    "def download_genome_fasta(dir_data, release='104'):\n",
+    "    ftp = FTP('ftp.ensembl.org')\n",
+    "    ftp.login() \n",
+    "\n",
+    "    # move to genome directory\n",
+    "    directory = 'pub/release-{}/fasta/homo_sapiens/dna'.format(release)\n",
+    "    ftp.cwd(directory)\n",
+    "\n",
+    "    allfiles = ftp.nlst()\n",
+    "\n",
+    "    for file in allfiles:\n",
+    "        if 'dna_rm.primary_assembly' in file:\n",
+    "            file_genome_sequence = file\n",
+    "            ftp.retrbinary('RETR ' + file, open(os.path.join(dir_data, file), 'wb').write)\n",
+    "            print(file_genome_sequence)\n",
+    "\n",
+    "    ftp.quit()\n",
+    "\n",
+    "    return dir_data+file_genome_sequence"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "def download_gene_gtf(dir_data, release='104'):\n",
+    "    ftp = FTP('ftp.ensembl.org')\n",
+    "    ftp.login() \n",
+    "\n",
+    "    # move to annotation directory\n",
+    "    directory = 'pub/release-{}/gtf/homo_sapiens/'.format(release)\n",
+    "    ftp.cwd(directory)\n",
+    "\n",
+    "    allfiles = ftp.nlst()\n",
+    "\n",
+    "    for file in allfiles:\n",
+    "        if '{}.gtf.gz'.format(release) in file:\n",
+    "            file_gene_annotation = file\n",
+    "            ftp.retrbinary('RETR ' + file, open(os.path.join(dir_data, file), 'wb').write)\n",
+    "            print(file_gene_annotation)\n",
+    "\n",
+    "    ftp.quit()\n",
+    "\n",
+    "    return dir_data+file_gene_annotation\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "source": [
     "def get_exons_annotation(file_gene_annotation):\n",
     "\n",
@@ -49,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "def get_exons_fasta(file_exon_annotation, file_genome_sequence):\n",
     "    \n",
@@ -69,10 +124,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "file_genome_sequence = download_genome_fasta('./data/')\n",
+    "cmd = \"gunzip {}\".format(file_gene_annotation)\n",
+    "os.system(cmd)\n",
+    "file_genome_sequence = file_gene_annotation.split('.gz')\n",
+    "file_genome_sequence"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Homo_sapiens.GRCh38.dna_rm.primary_assembly.fa.gz\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "file_gene_annotation = download_gene_gtf('./data/')\n",
+    "cmd = \"gunzip {}\".format(file_gene_annotation)\n",
+    "os.system(cmd)\n",
+    "file_gene_annotation = file_gene_annotation.split('.gz')\n",
+    "file_gene_annotation"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Homo_sapiens.GRCh38.104.gtf.gz\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [
-    "\n",
-    "file_exon_annotation = get_exons_annotation(file_gene_annotation)\n",
+    "# get exon annotation\n",
+    "file_exon_annotation = get_exons_annotation(file_gene_annotation)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# get exon sequences\n",
     "file_exon_sequence = get_exons_fasta(file_exon_annotation, file_genome_sequence)"
    ],
    "outputs": [],
@@ -87,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import os\n",
     "import copy\n",
@@ -105,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "file_exon_sequence = './data/Homo_sapiens.GRCh38.104.exons.fa'\n",
     "file_gene_annotation = './data/Homo_sapiens.GRCh38.104.gtf'"
@@ -115,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "GC_content_min = 40\n",
     "GC_content_max = 60\n",
@@ -129,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "GC_content_min = float(GC_content_min)\n",
     "GC_content_max = float(GC_content_max)\n",
@@ -141,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "gene_annotation = read_gtf(file_gene_annotation)\n",
     "exon_annotation = gene_annotation[gene_annotation[\"feature\"] == \"exon\"]\n",
@@ -152,23 +258,7 @@
     "pickle.dump(mapping_exon_to_gene, open('./data/mapping_exon_to_gene.pkl','wb'))\n",
     "pickle.dump(mapping_gene_to_exon, open('./data/mapping_gene_to_exon.pkl','wb'))\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/haicu/lisa.barros/anaconda3/envs/probe_design/lib/python3.8/site-packages/gtfparse/read_gtf.py:151: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version.\n",
-      "\n",
-      "\n",
-      "  result = parse_gtf(\n",
-      "/home/haicu/lisa.barros/anaconda3/envs/probe_design/lib/python3.8/site-packages/gtfparse/read_gtf.py:151: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version.\n",
-      "\n",
-      "\n",
-      "  result = parse_gtf(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'gene_version', 'gene_name', 'gene_source', 'gene_biotype', 'transcript_id', 'transcript_version', 'transcript_name', 'transcript_source', 'transcript_biotype', 'tag', 'ccds_id', 'transcript_support_level', 'exon_number', 'exon_id', 'exon_version', 'protein_id', 'protein_version']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -183,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "number_exons = 0\n",
     "number_probes = 0\n",
@@ -439,6 +529,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e702497fe34a953bc64f7695730fc8355b217a72fe7b6a6d2ceab38232512391"
+  },
   "kernelspec": {
    "name": "python3",
    "display_name": "Python 3.8.11 64-bit ('probe_design': conda)"
@@ -454,9 +547,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  },
-  "interpreter": {
-   "hash": "e702497fe34a953bc64f7695730fc8355b217a72fe7b6a6d2ceab38232512391"
   }
  },
  "nbformat": 4,
