add review comment fixes

--- a/oligo_designer_toolsuite/IO/test_loader.ipynb
+++ b/oligo_designer_toolsuite/IO/test_loader.ipynb
@@ -52,21 +52,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader_ncbi=FtpLoaderEnsemble(species,genome_assembly,annotation_release)"
+    "loader_ncbi=FTPLoaderNCBI(dir_output, species,genome_assembly,annotation_release)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/output/Homo_sapiens.GRCh38.dna_rm.primary_assembly.fa'"
+       "'/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/output/GCF_000001405.40_GRCh38.p14_genomic.gtf'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
     "#from pathlib import Path\n",
     "#Path(dir_output).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "loader_ncbi.download_fasta(dir_output)\n"
+    "loader_ncbi.download_gtf()\n"
    ]
   },
   {
