--- a/oligo_designer_toolsuite/test_DB.ipynb
+++ b/oligo_designer_toolsuite/test_DB.ipynb
@@ -28,7 +28,7 @@
     "dir_output  = os.path.join(cwd, 'output/annotations')\n",
     "print(dir_output)\n",
     "\n",
-    "from IO._database_new import NcbiDB, EnsemblDB, CustomDB"
+    "from IO._database import NcbiDB, EnsemblDB, CustomDB"
    ]
   },
   {
@@ -49,12 +49,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:531: UserWarning: No species defined. Using default species human!\n",
-      "  warnings.warn(f'No species defined. Using default species {species}!')\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:535: UserWarning: No genome assembly defined. Using default assembly hg38!\n",
-      "  warnings.warn(f'No genome assembly defined. Using default assembly {genome_assembly}!')\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:539: UserWarning: No annotation release defined. Using default release current!\n",
-      "  warnings.warn(f'No annotation release defined. Using default release {annotation_release}!')\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:581: UserWarning: No species defined. Using default species human!\n",
+      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:585: UserWarning: No genome assembly defined. Using default assembly hg38!\n",
+      "  warnings.warn(\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:591: UserWarning: No annotation release defined. Using default release current!\n",
+      "  warnings.warn(\n",
       "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
@@ -69,6 +69,37 @@
    ],
    "source": [
     "ncbi = NcbiDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:707: UserWarning: No species defined. Using default species human!\n",
+      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:711: UserWarning: No genome assembly defined. Using default assembly GRCh38!\n",
+      "  warnings.warn(\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:717: UserWarning: No annotation release defined. Using default release current!\n",
+      "  warnings.warn(\n",
+      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "\n",
+      "\n",
+      "  chunk_iterator = pd.read_csv(\n",
+      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "\n",
+      "\n",
+      "  chunk_iterator = pd.read_csv(\n",
+      "INFO:root:Extracted GTF attributes: ['gene_id', 'gene_version', 'gene_name', 'gene_source', 'gene_biotype', 'transcript_id', 'transcript_version', 'transcript_name', 'transcript_source', 'transcript_biotype', 'tag', 'ccds_id', 'transcript_support_level', 'exon_number', 'exon_id', 'exon_version', 'protein_id', 'protein_version']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ensembl = EnsemblDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
    ]
   },
   {
@@ -150,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +198,9 @@
      "output_type": "stream",
      "text": [
       "list of all the genes in the DB:\n",
-      "dict_keys(['AGRN', 'DDX11L1', 'DVL1', 'LOC112268402_1', 'MIB2', 'NOC2L', 'PLEKHN1', 'TRNT', 'UBE2J2', 'WASH7P'])\n",
+      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
       "Features of the first probe of the DB:\n",
-      "{'transcript_id': ['XM_011542248.3:XM_017002475.2:XM_017002474.2:NM_001367552.1:XM_047431794.1:NM_001160184.2:NM_032129.3:XM_017002478.3:XM_047431795.1:XM_017002479.2'], 'exon_id': ['XM_011542248.3_exon3:XM_017002475.2_exon3:XM_017002474.2_exon3:NM_001367552.1_exon3:XM_047431794.1_exon3:NM_001160184.2_exon3:NM_032129.3_exon3:XM_017002478.3_exon3:XM_047431795.1_exon3:XM_017002479.2_exon3'], 'chromosome': 1, 'start': ['970374'], 'end': ['970413'], 'strand': '+'}\n"
+      "{'transcript_id': ['XM_047444339.1:XM_047444356.1:XM_047444358.1'], 'exon_id': ['XM_047444339.1_exon3_XM_047444339.1_exon2:XM_047444356.1_exon3_XM_047444356.1_exon2:XM_047444358.1_exon3_XM_047444358.1_exon2'], 'chromosome': '1', 'start': ['1262371'], 'end': ['1262401'], 'strand': '-'}\n"
      ]
     }
    ],
