--- a/oligo_designer_toolsuite/test_DB.ipynb
+++ b/oligo_designer_toolsuite/test_DB.ipynb
@@ -120,12 +120,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:830: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:58: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:834: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:838: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation source not specified.\n",
+      "  warnings.warn(f\"Annotation source not specified.\")\n",
       "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
@@ -148,14 +150,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "index file /home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations/GCF_000001405.40_GRCh38.p14_genomic.fna.fai not found, generating...\n"
+     ]
+    }
+   ],
    "source": [
     "custom.create_reference_DB(dir_output=dir_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
