applied review comments

--- a/oligo_designer_toolsuite/test_filters.ipynb
+++ b/oligo_designer_toolsuite/test_filters.ipynb
@@ -124,8 +124,8 @@
     "custom = CustomDB(probe_length_min = 30, probe_length_max=40, file_annotation=annotation, file_sequence=sequence, filters=filters)\n",
     "\n",
     "start_time = time.time()\n",
-    "custom.create_oligos_DB(genes = genes, number_batchs = 2, dir_output=dir_output, write = True)\n",
-    "print(\" Creating and filtering at the same time: --- %s seconds ---\" % (time.time() - start_time))"
+    "custom.create_oligos_DB(genes = genes, number_batchs = 1, dir_output=dir_output, write = True)\n",
+    "print(\" Creating and filtering the probes: --- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
