--- a/oligo_designer_toolsuite/IO/test_loader.ipynb
+++ b/oligo_designer_toolsuite/IO/test_loader.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from _ftp_loader import FtpLoaderEnsemble, FTPLoaderNCBI\n",
-    "import os"
+    "import os\n",
+    "from _data_parser import read_gtf, check_gtf_format, check_fasta_format, check_tsv_format"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +67,7 @@
        "'/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/output/GCF_000001405.40_GRCh38.p14_genomic.gtf'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,57 +75,494 @@
    "source": [
     "#from pathlib import Path\n",
     "#Path(dir_output).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "loader_ncbi.download_gtf()\n"
+    "file_type=\"gtf\"\n",
+    "loader_ncbi.download_files(file_type)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Read gtf Ensembl\n",
+    "\n",
+    "filepath=cwd+\"/output/Homo_sapiens.GRCh38.106.gtf\"\n",
+    "\n",
+    "gtf = read_gtf(filepath)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'file_name_from_server' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/test_loader.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/test_loader.ipynb#ch0000001vscode-remote?line=0'>1</a>\u001b[0m ensemble_loader\u001b[39m=\u001b[39mFtpLoaderEnsemble(file_name_from_server, dir_output, designer_name)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'file_name_from_server' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seqname</th>\n",
+       "      <th>source</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>score</th>\n",
+       "      <th>strand</th>\n",
+       "      <th>frame</th>\n",
+       "      <th>gene_id</th>\n",
+       "      <th>gene_version</th>\n",
+       "      <th>...</th>\n",
+       "      <th>transcript_source</th>\n",
+       "      <th>transcript_biotype</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>ccds_id</th>\n",
+       "      <th>transcript_support_level</th>\n",
+       "      <th>exon_number</th>\n",
+       "      <th>exon_id</th>\n",
+       "      <th>exon_version</th>\n",
+       "      <th>protein_id</th>\n",
+       "      <th>protein_version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>gene</td>\n",
+       "      <td>1211340</td>\n",
+       "      <td>1214153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000186827</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>transcript</td>\n",
+       "      <td>1211340</td>\n",
+       "      <td>1214153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000186827</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>CCDS,basic</td>\n",
+       "      <td>CCDS11</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>exon</td>\n",
+       "      <td>1213983</td>\n",
+       "      <td>1214153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000186827</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>CCDS,basic</td>\n",
+       "      <td>CCDS11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ENSE00001832731</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>CDS</td>\n",
+       "      <td>1213983</td>\n",
+       "      <td>1214127</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000186827</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>CCDS,basic</td>\n",
+       "      <td>CCDS11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>ENSP00000368538</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>start_codon</td>\n",
+       "      <td>1214125</td>\n",
+       "      <td>1214127</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000186827</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl_havana</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>CCDS,basic</td>\n",
+       "      <td>CCDS11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3279400</th>\n",
+       "      <td>KI270713.1</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>five_prime_utr</td>\n",
+       "      <td>32373</td>\n",
+       "      <td>32528</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000277475</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>basic</td>\n",
+       "      <td></td>\n",
+       "      <td>NA</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3279401</th>\n",
+       "      <td>KI270713.1</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>three_prime_utr</td>\n",
+       "      <td>31698</td>\n",
+       "      <td>31841</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000277475</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>protein_coding</td>\n",
+       "      <td>basic</td>\n",
+       "      <td></td>\n",
+       "      <td>NA</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3279402</th>\n",
+       "      <td>KI270713.1</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>gene</td>\n",
+       "      <td>21861</td>\n",
+       "      <td>22024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000275405</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3279403</th>\n",
+       "      <td>KI270713.1</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>transcript</td>\n",
+       "      <td>21861</td>\n",
+       "      <td>22024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000275405</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>snRNA</td>\n",
+       "      <td>basic</td>\n",
+       "      <td></td>\n",
+       "      <td>NA</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3279404</th>\n",
+       "      <td>KI270713.1</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>exon</td>\n",
+       "      <td>21861</td>\n",
+       "      <td>22024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENSG00000275405</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ensembl</td>\n",
+       "      <td>snRNA</td>\n",
+       "      <td>basic</td>\n",
+       "      <td></td>\n",
+       "      <td>NA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ENSE00003747303</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3279405 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            seqname          source          feature    start      end  score  \\\n",
+       "0                 1  ensembl_havana             gene  1211340  1214153    NaN   \n",
+       "1                 1  ensembl_havana       transcript  1211340  1214153    NaN   \n",
+       "2                 1  ensembl_havana             exon  1213983  1214153    NaN   \n",
+       "3                 1  ensembl_havana              CDS  1213983  1214127    NaN   \n",
+       "4                 1  ensembl_havana      start_codon  1214125  1214127    NaN   \n",
+       "...             ...             ...              ...      ...      ...    ...   \n",
+       "3279400  KI270713.1         ensembl   five_prime_utr    32373    32528    NaN   \n",
+       "3279401  KI270713.1         ensembl  three_prime_utr    31698    31841    NaN   \n",
+       "3279402  KI270713.1         ensembl             gene    21861    22024    NaN   \n",
+       "3279403  KI270713.1         ensembl       transcript    21861    22024    NaN   \n",
+       "3279404  KI270713.1         ensembl             exon    21861    22024    NaN   \n",
+       "\n",
+       "        strand frame          gene_id gene_version  ... transcript_source  \\\n",
+       "0            -     0  ENSG00000186827           11  ...                     \n",
+       "1            -     0  ENSG00000186827           11  ...    ensembl_havana   \n",
+       "2            -     0  ENSG00000186827           11  ...    ensembl_havana   \n",
+       "3            -     0  ENSG00000186827           11  ...    ensembl_havana   \n",
+       "4            -     0  ENSG00000186827           11  ...    ensembl_havana   \n",
+       "...        ...   ...              ...          ...  ...               ...   \n",
+       "3279400      -     0  ENSG00000277475            1  ...           ensembl   \n",
+       "3279401      -     0  ENSG00000277475            1  ...           ensembl   \n",
+       "3279402      -     0  ENSG00000275405            1  ...                     \n",
+       "3279403      -     0  ENSG00000275405            1  ...           ensembl   \n",
+       "3279404      -     0  ENSG00000275405            1  ...           ensembl   \n",
+       "\n",
+       "        transcript_biotype         tag ccds_id transcript_support_level  \\\n",
+       "0                                                                         \n",
+       "1           protein_coding  CCDS,basic  CCDS11                        1   \n",
+       "2           protein_coding  CCDS,basic  CCDS11                        1   \n",
+       "3           protein_coding  CCDS,basic  CCDS11                        1   \n",
+       "4           protein_coding  CCDS,basic  CCDS11                        1   \n",
+       "...                    ...         ...     ...                      ...   \n",
+       "3279400     protein_coding       basic                               NA   \n",
+       "3279401     protein_coding       basic                               NA   \n",
+       "3279402                                                                   \n",
+       "3279403              snRNA       basic                               NA   \n",
+       "3279404              snRNA       basic                               NA   \n",
+       "\n",
+       "        exon_number          exon_id exon_version       protein_id  \\\n",
+       "0                                                                    \n",
+       "1                                                                    \n",
+       "2                 1  ENSE00001832731            2                    \n",
+       "3                 1                                ENSP00000368538   \n",
+       "4                 1                                                  \n",
+       "...             ...              ...          ...              ...   \n",
+       "3279400                                                              \n",
+       "3279401                                                              \n",
+       "3279402                                                              \n",
+       "3279403                                                              \n",
+       "3279404           1  ENSE00003747303            1                    \n",
+       "\n",
+       "        protein_version  \n",
+       "0                        \n",
+       "1                        \n",
+       "2                        \n",
+       "3                     3  \n",
+       "4                        \n",
+       "...                 ...  \n",
+       "3279400                  \n",
+       "3279401                  \n",
+       "3279402                  \n",
+       "3279403                  \n",
+       "3279404                  \n",
+       "\n",
+       "[3279405 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ensemble_loader=FtpLoaderEnsemble(file_name_from_server, dir_output, designer_name)"
+    "gtf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read gtf NCBI\n",
+    "\n",
+    "filepath=cwd+\"/output/GCF_000001405.40_GRCh38.p14_genomic.gtf\"\n",
+    "\n",
+    "gtf = read_gtf(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filepath=cwd+\"/output/GCF_000001405.40_GRCh38.p14_genomic.gtf\"\n",
+    "check_gtf_format(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path= cwd+\"/Sample.tsv\"\n",
+    "check_tsv_format(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filepath=cwd+\"/output/Homo_sapiens.GRCh38.dna_rm.primary_assembly.fa\"\n",
+    "check_fasta_format(filepath)"
    ]
   }
  ],
