--- a/oligo_designer_toolsuite/test_filters.ipynb
+++ b/oligo_designer_toolsuite/test_filters.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\n"
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite\n",
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/output/annotations\n"
      ]
     }
    ],
@@ -54,33 +54,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:55: UserWarning: Species not specified.\n",
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:55: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Genome assembly not specified.\n",
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Annotation release not specified.\n",
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation source not specified.\n",
-      "  warnings.warn(f\"Annotation source not specified.\")\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'transcript_id', 'db_xref', 'description', 'gbkey', 'gene', 'gene_biotype', 'pseudo', 'product', 'transcript_biotype', 'exon_number', 'gene_synonym', 'model_evidence', 'tag', 'protein_id', 'experiment', 'inference', 'note', 'part', 'exception', 'isoform', 'anticodon', 'partial', 'The', 'transl_except', 'non-AUG', 'standard_name', 'source', 'similar', 'substituted', 'transferase', 'deleted', 'codons', '12S', '16S', 'transl_table', 'ATPase']\n"
+      "/home/chels/CRISPR/repos/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation source not specified.\n",
+      "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the total number of probes found: 105655\n",
-      "the total number of probes found: 322586\n",
       "the total number of probes found: 6367\n",
-      " Creating and filtering at the same time: --- 161.3660180568695 seconds ---\n"
+      " Creating and filtering the probes: --- 379.2334680557251 seconds ---\n"
      ]
     }
    ],
@@ -153,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('oligo')",
+   "display_name": "Python 3.10.4 ('oligo': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +161,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7ff94d65164c54a2126c7dc0869520902e3a005d5dddb9f8c3667ad0fd9373c9"
+    "hash": "797cf0fae3aa9496144015db7114399f14bdbbab56900ed16736529315e01dbb"
    }
   }
  },
