benchmark specificity filter

--- a/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
+++ b/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Benchmark on current implementation (2 batches)"
+    "Run blastn genewise"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_batches=2\n",
+    "number_batches=10\n",
     "ligation_region=0\n",
     "dir_output=cwd + \"/output/\"\n",
     "dir_annotations=dir_output+\"annotations/\"\n",
@@ -65,10 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
@@ -87,24 +88,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_exact.apply()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blast run in 39.909551900000224 seconds\n",
-      "Blast results processed in 2.3062179000007745 seconds\n"
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 2.083334200000536 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_exact.apply()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 29.773885700000392 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 14.0386748000019 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.7839786000004096 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "blast_filter.apply()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run filter for 8 batches (no_cpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_batches=8\n",
+    "\n",
+    "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
+    "        dir_output,\n",
+    "        file_probe_info,\n",
+    "        genes,\n",
+    "        min_probes_per_gene,\n",
+    "        dir_annotations)\n",
+    "\n",
+    "blast_filter=ProbeFilterBlastn(number_batches,\n",
+    "        file_transcriptome_fasta, \n",
+    "        ligation_region,\n",
+    "        dir_output,\n",
+    "        file_probe_info,\n",
+    "        genes,\n",
+    "        min_probes_per_gene, word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.053314699998736614 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_exact.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 27.35338210000191 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 2.0702296999988903 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.19047110000246903 seconds\n"
      ]
     }
    ],
@@ -121,22 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_batches=5\n",
     "\n",
-    "filter_base = ProbeFilterBase(number_batches, ligation_region,\n",
-    "        dir_output,\n",
-    "        file_probe_info,\n",
-    "        genes,\n",
-    "        dir_annotations)\n",
     "        \n",
     "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
     "        genes,\n",
+    "        min_probes_per_gene,\n",
     "        dir_annotations)\n",
     "\n",
     "blast_filter=ProbeFilterBlastn(number_batches,\n",
@@ -144,30 +221,41 @@
     "        ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
-    "        genes,\n",
+    "        genes, min_probes_per_gene,\n",
     "        word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_exact.apply()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blast run in 55.29058210000221 seconds\n",
-      "Blast results processed in 1.066772599995602 seconds\n"
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.04456019999997807 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_exact.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 29.68888589999915 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 1.0400885000017297 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.1416412999969907 seconds\n"
      ]
     }
    ],
@@ -179,56 +267,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run filter for 10 batches (1 gene per batch)"
+    "Run filter for 1 batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_batches=10\n",
+    "number_batches=1\n",
     "\n",
-    "filter_base = ProbeFilterBase(number_batches, ligation_region,\n",
-    "        dir_output,\n",
-    "        file_probe_info,\n",
-    "        genes,\n",
-    "        dir_annotations)\n",
-    "        \n",
     "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
-    "        genes, dir_annotations)\n",
+    "        genes,\n",
+    "        min_probes_per_gene,\n",
+    "        dir_annotations)\n",
     "\n",
     "blast_filter=ProbeFilterBlastn(number_batches,\n",
     "        file_transcriptome_fasta, \n",
     "        ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
-    "        genes, word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
+    "        genes, min_probes_per_gene,\n",
+    "        word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_exact.apply()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blast run in 30.0467370999977 seconds\n",
-      "Blast results processed in 0.19275310000375612 seconds\n"
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.019585199999710312 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_exact.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 26.746704400000453 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 1.1757191000033345 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.11555640000005951 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "blast_filter.apply()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run filter for 2 batches (5 genes per batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_batches=2\n",
+    "\n",
+    "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
+    "        dir_output,\n",
+    "        file_probe_info,\n",
+    "        genes,\n",
+    "        min_probes_per_gene,\n",
+    "        dir_annotations)\n",
+    "\n",
+    "blast_filter=ProbeFilterBlastn(number_batches,\n",
+    "        file_transcriptome_fasta, \n",
+    "        ligation_region,\n",
+    "        dir_output,\n",
+    "        file_probe_info,\n",
+    "        genes, min_probes_per_gene,\n",
+    "        word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating batches\n",
+      "INFO:filter_probes:Exact matches filtered in 0.014794200000324054 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_exact.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:filter_probes:Creating blast database\n",
+      "INFO:filter_probes:Blast database created in 28.575938599999063 seconds\n",
+      "INFO:filter_probes:Blast alignmnet search finished in 0.9676265000016429 seconds\n",
+      "INFO:filter_probes:Blast results processed in 0.15396490000057383 seconds\n"
      ]
     }
    ],
@@ -342,24 +507,6 @@
     "#make graph x- different batches (with approx no probes), y file size of each batch (should be approx a straight line)\n",
     "\n",
     "#run experiment again for n\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blast run in 33.96729449999839 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Run blast on batches\n",
-    "blast_filter.run_blast_search(10)"
    ]
   }
  ],
