--- a/oligo_designer_toolsuite/test_DB.ipynb
+++ b/oligo_designer_toolsuite/test_DB.ipynb
@@ -42,64 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:581: UserWarning: No species defined. Using default species human!\n",
-      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:585: UserWarning: No genome assembly defined. Using default assembly hg38!\n",
-      "  warnings.warn(\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:591: UserWarning: No annotation release defined. Using default release current!\n",
-      "  warnings.warn(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'transcript_id', 'db_xref', 'description', 'gbkey', 'gene', 'gene_biotype', 'pseudo', 'product', 'transcript_biotype', 'exon_number', 'gene_synonym', 'model_evidence', 'tag', 'protein_id', 'experiment', 'inference', 'note', 'part', 'exception', 'isoform', 'anticodon', 'partial', 'The', 'transl_except', 'non-AUG', 'standard_name', 'source', 'similar', 'substituted', 'transferase', 'deleted', 'codons', '12S', '16S', 'transl_table', 'ATPase']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ncbi = NcbiDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
+    "#ncbi = NcbiDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:707: UserWarning: No species defined. Using default species human!\n",
-      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:711: UserWarning: No genome assembly defined. Using default assembly GRCh38!\n",
-      "  warnings.warn(\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:717: UserWarning: No annotation release defined. Using default release current!\n",
-      "  warnings.warn(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'gene_version', 'gene_name', 'gene_source', 'gene_biotype', 'transcript_id', 'transcript_version', 'transcript_name', 'transcript_source', 'transcript_biotype', 'tag', 'ccds_id', 'transcript_support_level', 'exon_number', 'exon_id', 'exon_version', 'protein_id', 'protein_version']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ensembl = EnsemblDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
+    "#ensembl = EnsemblDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
    ]
   },
   {
@@ -113,63 +69,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:830: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:58: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:834: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database_new.py:838: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'transcript_id', 'db_xref', 'description', 'gbkey', 'gene', 'gene_biotype', 'pseudo', 'product', 'transcript_biotype', 'exon_number', 'gene_synonym', 'model_evidence', 'tag', 'protein_id', 'experiment', 'inference', 'note', 'part', 'exception', 'isoform', 'anticodon', 'partial', 'The', 'transl_except', 'non-AUG', 'standard_name', 'source', 'similar', 'substituted', 'transferase', 'deleted', 'codons', '12S', '16S', 'transl_table', 'ATPase']\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation source not specified.\n",
+      "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     }
    ],
    "source": [
-    "annotation = dir_output+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
-    "sequence = dir_output+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
+    "dir_annotation = '/home/francesco/Desktop/Work/NCBI'\n",
+    "annotation = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
+    "sequence = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
     "custom = CustomDB(probe_length_min = 30, probe_length_max=40, file_annotation=annotation, file_sequence=sequence, filters = [])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom.create_reference_DB(dir_output=dir_output)"
+    "#custom.create_reference_DB(dir_output=dir_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the total number of probes found: 105655\n",
-      "the total number of probes found: 322586\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "genes = ['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
-    "custom.create_oligos_DB(genes = genes, number_batchs = 2, dir_output=dir_output)"
+    "genes = ['WASH7P']#, 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
+    "custom.create_oligos_DB(genes = genes, number_batchs = 2, dir_output=dir_output)\n",
+    "custom.write_oligos_DB_gtf()"
    ]
   },
   {
@@ -181,16 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom.read_oligos_DB(dir_output + '/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript')"
+    "dir_output = \"/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\"\n",
+    "custom.read_oligos_DB_tsv(dir_output + '/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.tsv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,17 +141,43 @@
      "output_type": "stream",
      "text": [
       "list of all the genes in the DB:\n",
-      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
+      "dict_keys(['WASH7P'])\n",
       "Features of the first probe of the DB:\n",
-      "{'transcript_id': ['XM_047444339.1:XM_047444356.1:XM_047444358.1'], 'exon_id': ['XM_047444339.1_exon3_XM_047444339.1_exon2:XM_047444356.1_exon3_XM_047444356.1_exon2:XM_047444358.1_exon3_XM_047444358.1_exon2'], 'chromosome': '1', 'start': ['1262371'], 'end': ['1262401'], 'strand': '-'}\n"
+      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14381], 'end': [14411], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid21'}\n"
      ]
     }
    ],
    "source": [
     "print(\"list of all the genes in the DB:\")\n",
     "print(custom.oligos_DB.keys())\n",
-    "gene = list(custom.oligos_DB.keys())[6]\n",
+    "gene = list(custom.oligos_DB.keys())[0]\n",
     "probe = list(custom.oligos_DB[gene].keys())[20]\n",
+    "print(\"Features of the first probe of the DB:\")\n",
+    "print(custom.oligos_DB[gene][probe])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list of all the genes in the DB:\n",
+      "dict_keys(['WASH7P'])\n",
+      "Features of the first probe of the DB:\n",
+      "{'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon11', 'NR_024540.1_exon11_NR_024540.1_exon10'], 'chromosome': '1', 'start': [14361, 14829], 'end': [14391, 14859], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "custom.read_oligos_DB_gtf(dir_output + '/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.gtf')\n",
+    "print(\"list of all the genes in the DB:\")\n",
+    "print(custom.oligos_DB.keys())\n",
+    "gene = list(custom.oligos_DB.keys())[0]\n",
+    "probe = list(custom.oligos_DB[gene].keys())[0]\n",
     "print(\"Features of the first probe of the DB:\")\n",
     "print(custom.oligos_DB[gene][probe])"
    ]
