--- a/oligo_designer_toolsuite/test_filters.ipynb
+++ b/oligo_designer_toolsuite/test_filters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,40 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:55: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:58: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation source not specified.\n",
-      "  warnings.warn(f\"Annotation source not specified.\")\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "/home/francesco/miniconda3/envs/oligo/lib/python3.10/site-packages/gtfparse/read_gtf.py:82: FutureWarning: The warn_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
-      "\n",
-      "\n",
-      "  chunk_iterator = pd.read_csv(\n",
-      "INFO:root:Extracted GTF attributes: ['gene_id', 'transcript_id', 'db_xref', 'description', 'gbkey', 'gene', 'gene_biotype', 'pseudo', 'product', 'transcript_biotype', 'exon_number', 'gene_synonym', 'model_evidence', 'tag', 'protein_id', 'experiment', 'inference', 'note', 'part', 'exception', 'isoform', 'anticodon', 'partial', 'The', 'transl_except', 'non-AUG', 'standard_name', 'source', 'similar', 'substituted', 'transferase', 'deleted', 'codons', '12S', '16S', 'transl_table', 'ATPase']\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation source not specified.\n",
+      "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the total number of probes found: 105655\n",
-      "the total number of probes found: 322586\n",
-      "the total number of probes found: 6367\n",
-      " Creating and filtering at the same time: --- 161.3660180568695 seconds ---\n"
+      " Creating and filtering the probes: --- 8.812329292297363 seconds ---\n"
      ]
     }
    ],
@@ -111,34 +99,40 @@
     "        'fmdmethod': 1,\n",
     "        'GC': None,\n",
     "        'fmd': 20}\n",
-    "annotation = dir_output+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
-    "sequence = dir_output+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
-    "genes = ['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
+    "\n",
+    "dir_annotation = '/home/francesco/Desktop/Work/NCBI'\n",
+    "annotation = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
+    "sequence = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
+    "genes = ['WASH7P']#, 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
     "\n",
     "masked_sequences = MaskedSequences()\n",
     "GC_content = GCContent(GC_content_min = 40, GC_content_max = 60)\n",
     "melting_temperature = MeltingTemperature(Tm_min = 52, Tm_max= 67, Tm_parameters = Tm_parameters, Tm_correction_parameters = Tm_correction_parameters)\n",
-    "arms_tm = PadlockArms(min_arm_length=10,max_Tm_dif=2,Tm_min=40,Tm_max=43, Tm_parameters = Tm_parameters, Tm_correction_parameters = Tm_correction_parameters)\n",
+    "arms_tm = PadlockArms(min_arm_length=10,max_Tm_dif=2,Tm_min=38,Tm_max=49, Tm_parameters = Tm_parameters, Tm_correction_parameters = Tm_correction_parameters)\n",
     "\n",
     "filters = [masked_sequences, GC_content, melting_temperature, arms_tm]\n",
     "custom = CustomDB(probe_length_min = 30, probe_length_max=40, file_annotation=annotation, file_sequence=sequence, filters=filters)\n",
     "\n",
     "start_time = time.time()\n",
-    "custom.create_oligos_DB(genes = genes, number_batchs = 1, dir_output=dir_output, write = True)\n",
+    "custom.create_oligos_DB(genes = genes, number_batchs = 1, dir_output=dir_output, write_tsv = True)\n",
     "print(\" Creating and filtering the probes: --- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
-      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon2'], 'chromosome': '1', 'start': [24848], 'end': [24878], 'strand': '-', 'GC_content': 60.0, 'melt_temp': 62.22, 'melt_temp_rm1': 42.84, 'melt_temp_arm2': 42.99, 'dif_melt_temp_arms': 0.15, 'ligation_site': 14}\n"
+      "dict_keys(['WASH7P'])\n",
+      "AGAGGAGGACGAGGACGACTGGGAATCGTA\n",
+      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1', 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14.0}\n",
+      "dict_keys(['WASH7P'])\n",
+      "WASH7P_pid1\n",
+      "{'transcript_id': ['NR_024540.1'], 'exon_id': ['NR_024540.1_exon11'], 'chromosome': '1', 'start': [14464], 'end': [14494], 'strand': '-', 'length': 30, 'probe_id': 'WASH7P_pid1', 'GC_content': 56.67, 'melt_temp': 62.05, 'melt_temp_rm1': 43.24, 'melt_temp_arm2': 44.76, 'dif_melt_temp_arms': 1.52, 'ligation_site': 14.0}\n"
      ]
     }
    ],
@@ -147,7 +141,15 @@
     "print(custom.oligos_DB.keys())\n",
     "gene = list(custom.oligos_DB.keys())[0]\n",
     "seq = list(custom.oligos_DB[gene].keys())[0]\n",
-    "print(custom.oligos_DB[gene][seq])\n"
+    "print(seq)\n",
+    "print(custom.oligos_DB[gene][seq])\n",
+    "custom.write_oligos_DB_gtf()\n",
+    "custom.read_oligos_DB_gtf(custom.file_oligos_DB_gtf)\n",
+    "print(custom.oligos_DB.keys())\n",
+    "gene = list(custom.oligos_DB.keys())[0]\n",
+    "seq = list(custom.oligos_DB[gene].keys())[0]\n",
+    "print(seq)\n",
+    "print(custom.oligos_DB[gene][seq])"
    ]
   }
  ],
