get list of genes

--- a/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
+++ b/oligo_designer_toolsuite/tests/benchmark_specificity_filter.ipynb
@@ -44,16 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_batches=10\n",
+    "from oligo_designer_toolsuite.IO._data_parser import read_gtf\n",
+    "\n",
+    "gtf= cwd + \"/output/annotations/GCF_000001405.40_GRCh38.p14_genomic.gtf\"\n",
+    "\n",
+    "df=read_gtf(gtf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes=df[\"gene_id\"].tolist()[:100]\n",
     "ligation_region=0\n",
     "dir_output=cwd + \"/output/\"\n",
     "dir_annotations=dir_output+\"annotations/\"\n",
     "file_probe_info=dir_annotations + \"oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript\"\n",
-    "genes = ['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
     "min_probes_per_gene=2\n",
     "file_transcriptome_fasta=dir_output +\"annotations/reference_DB_unknown_unknown_Custom_release_unknown_genome_False_gene_transcript_True\"\n",
     "word_size=10\n",
@@ -64,12 +76,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run for no. batches=no. genes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "number_batches=len(genes)\n",
     "filter_exact=ProbeFilterExact(number_batches, ligation_region,\n",
     "        dir_output,\n",
     "        file_probe_info,\n",
@@ -83,44 +103,9 @@
     "        dir_output,\n",
     "        file_probe_info,\n",
     "        genes,\n",
-    "        min_probes_per_gene, word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:filter_probes:Creating batches\n",
-      "INFO:filter_probes:Exact matches filtered in 2.083334200000536 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "filter_exact.apply()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:filter_probes:Creating blast database\n",
-      "INFO:filter_probes:Blast database created in 29.773885700000392 seconds\n",
-      "INFO:filter_probes:Blast alignmnet search finished in 14.0386748000019 seconds\n",
-      "INFO:filter_probes:Blast results processed in 0.7839786000004096 seconds\n"
-     ]
-    }
-   ],
-   "source": [
+    "        min_probes_per_gene, word_size, percent_identity, probe_length_min, probe_length_max, coverage)\n",
+    "\n",
+    "filter_exact.apply()\n",
     "blast_filter.apply()"
    ]
   },
@@ -128,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run filter for 8 batches (no_cpus)"
+    "Run filter for 8 batches (number cpus)"
    ]
   },
   {
@@ -152,44 +137,10 @@
     "        dir_output,\n",
     "        file_probe_info,\n",
     "        genes,\n",
-    "        min_probes_per_gene, word_size, percent_identity, probe_length_min, probe_length_max, coverage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:filter_probes:Creating batches\n",
-      "INFO:filter_probes:Exact matches filtered in 0.053314699998736614 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "filter_exact.apply()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:filter_probes:Creating blast database\n",
-      "INFO:filter_probes:Blast database created in 27.35338210000191 seconds\n",
-      "INFO:filter_probes:Blast alignmnet search finished in 2.0702296999988903 seconds\n",
-      "INFO:filter_probes:Blast results processed in 0.19047110000246903 seconds\n"
-     ]
-    }
-   ],
-   "source": [
+    "        min_probes_per_gene, word_size, percent_identity, probe_length_min, probe_length_max, coverage)\n",
+    "\n",
+    "\n",
+    "filter_exact.apply()\n",
     "blast_filter.apply()"
    ]
   },
