--- a/oligo_designer_toolsuite/test_filters.ipynb
+++ b/oligo_designer_toolsuite/test_filters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,52 @@
     "\n",
     "dir_output  = os.path.join(cwd, 'output/annotations')\n",
     "print(dir_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get list of genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from oligo_designer_toolsuite.IO._data_parser import read_gtf\n",
+    "\n",
+    "gtf= cwd + \"/output/annotations/GCF_000001405.40_GRCh38.p14_genomic.gtf\"\n",
+    "\n",
+    "df=read_gtf(gtf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes=df[\"gene_id\"].tolist()[:100]"
    ]
   },
   {
